[tool.poetry]
name = "dominantcolors"
version = "0.1.1"
description = "script to generate a palette of dominant colors from an image"
authors = ["pablonoya <pablonoya18@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11,<3.13"
fast-colorthief = "^0.0.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
dominantcolors = "dominantcolors.cli:main"
